--- a/Meta FrontEnd Development/Course 1/clock/clock.css
+++ b/Meta FrontEnd Development/Course 1/clock/clock.css
@@ -29,3 +29,5 @@ img {
     font-weight:normal;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+h1{font-size:20px;
+  text-align:center;}
